# I2CS

./: .gitignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml
I2CS/: asgi.py  settings.py  urls.py  wsgi.py
evaluation/: admin.py  forms.py  models.py  urls.py  views.py
evaluation/migrations/: 0001_initial.py  0002_alter_evaluations_image.py  0002_user_phone_num_alter_user_email.py  0003_alter_evaluations_image.py  0003_evaluations.py  0004_evaluations_user_id_alter_evaluations_contact_method.py  0005_alter_evaluations_image.py  0006_rename_user_id_evaluations_user.py
static/evaluation/: style.css
templates/evaluation/: base.html  evaluations.html  home.html  index.html  request_evaluation.html  signup.html
templates/registration/: email_verification.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
